[metadata]
name = mk-ledmatrix-util
version = 0.0.1
author = Michael Kenny
author_email = michaelkennyjr@gmail.com
description = Utility package for LED matrix based on hzeller's rpi-rgb-led-matrix
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/michaelkennyjr/ledmatrix
project_urls =
    Bug Tracker = https://github.com/michaelkennyjr/ledmatrix/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    
[options]
packages = find:
python_requires = >=3.7
